# xnminer

./: .gitignore  HOWTO.md  README.md  Start-Miner.bat  Start-Miner.ps1  main.py  miner.ini.example
config/: settings.py  wallet_setup.py
core/: supervisor.py
debug/: temp_watchdog.py
efficiency/: gpu_power.py
mining/: cuda_engine.py
mining/backends/: cuda_native.py
native/: build.ps1
native/engine/: CMakeLists.txt
